asm-egress-gateway/team-y/team-y-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "team-y"
  labels:
    team: "team-y"
    istio.io/rev: "asm-1145-8"
